# close-call

./: .env.example  .gitignore  CLAUDE.md  Close Call.url  Dockerfile  PROJECT.md  README.md  bot.py  build_desktop.py  create_dmg.sh  desktop.py  docker-compose.yml  feedback.py  pyproject.toml  requirements.txt  scenarios.py  server.py
SDD/prompts/: PROMPT-001-build-poc-2026-04-11.md  PROMPT-002-user-speech-transcription-2026-04-13.md
SDD/prompts/context-management/: progress.md
SDD/requirements/: SPEC-001-build-poc.md  SPEC-002-user-speech-transcription.md
SDD/research/: RESEARCH-001-build-poc.md  RESEARCH-002-audio-flow-diagram.md  RESEARCH-002-user-speech-transcription.md
SDD/reviews/: CRITICAL-IMPL-build-poc-20260411.md  CRITICAL-IMPL-markdown-scenarios-20260413.md  CRITICAL-IMPL-user-speech-transcription-20260413.md  CRITICAL-RESEARCH-build-poc-20260411-r2.md  CRITICAL-RESEARCH-build-poc-20260411.md  CRITICAL-RESEARCH-user-speech-transcription-20260412.md  CRITICAL-SPEC-build-poc-20260411.md  CRITICAL-SPEC-user-speech-transcription-20260412.md  REVIEW-001-build-poc-20260411.md  REVIEW-002-user-speech-transcription-20260413.md
scenarios/: _template.md  cold_prospect.md  expansion_competitor.md  price_sensitive.md  roi_skeptic.md  technical_objections.md
static/: demo-feedback.html  demo-feedback.md  index.html  landing.html  login.html
